<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_forecast">
        <EditTextPreference
            android:key="@string/pref_city_key"
            android:title="@string/pref_city_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_units_key"
            android:title="@string/pref_units_title"
            android:entries="@array/pref_units_entries"
            android:entryValues="@array/pref_units_values"
            android:defaultValue="@string/pref_units_default_value"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>