<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--  add two items current weather and fivedayforecast  -->
    <item
        android:id="@+id/current_weather"
        android:title="@string/label_current_weather"
        android:icon="@drawable/ic_action_bookmarks" />
    <item
        android:id="@+id/five_day_forecast"
        android:title="@string/label_five_day_forecast"
        android:icon="@drawable/ic_action_five_day_forecast" />
    <item
        android:id="@+id/settings"
        android:title="@string/label_settings"
        android:icon="@drawable/ic_action_settings" />

    <item
        android:id="@+id/programmatically_inserted"
        android:title="Programmatically inserted">
        <menu></menu>
    </item>
</menu>