<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/media_player">

    <fragment
        android:id="@+id/media_player"
        android:label="@string/label_current_weather"
        android:name="edu.oregonstate.cs492.assignment4.ui.MediaPlayerFragment">
    </fragment>

    <fragment
        android:id="@+id/lyrics"
        android:label="Lyrics"
        android:name="edu.oregonstate.cs492.assignment4.ui.TrackLyricsFragment" >
        <argument
            android:name="track"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/track_search"
        android:name="edu.oregonstate.cs492.assignment4.ui.TrackSearchFragment"
        android:label="@string/label_track_search">
        <action
            android:id="@+id/navigate_to_lyrics"
            app:destination="@id/lyrics"/>
<!--            <argument-->
<!--                android:name="trackId"-->
<!--                app:argType="integer" />-->
<!--        </action>-->
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:label="@string/label_settings"
        android:name="edu.oregonstate.cs492.assignment4.ui.SettingsFragment" />

    <action
        android:id="@+id/navigate_to_settings"
        app:destination="@id/settings" />

</navigation>